ecma.output
Terminals unused in grammar

   EQUAL_EQUAL
   ERR_REDCL
   ERR_NO_DECL
   ERR_TYPE_EXPECTED
   ERR_BOOL_TYPE_EXPECTED
   ERR_TYPE_MISMATCH
   ERR_INVALID_TYPE
   ERR_KIND_NOT_STRUCT
   ERR_FIELD_NOT_DECL
   ERR_KIND_NOT_ARRAY
   ERR_INVALID_INDEX_TYPE
   ERR_KIND_NOT_VAR
   ERR_KIND_NOT_FUNCTION
   ERR_TOO_MANY_ARGS
   ERR_PARAM_TYPE
   ERR_TOO_FEW_ARGS
   ERR_RETURN_TYPE_MISMATCH
   NT_TRUE
   NT_FALSE
   NT_CHR
   NT_STR
   NT_NUM
   MF
   MC
   NO_KIND_DEF_
   VAR_
   PARAM_
   FUNCTION_
   FIELD_
   ARRAY_TYPE_
   STRUCT_TYPE_
   ALIAS_TYPE_
   SCALAR_TYPE_
   UNIVERSAL_


Grammar

    0 $accept: P $end

    1 P: LDE

    2 LDE: LDE DE
    3    | DE

    4 DE: DF
    5   | DT

    6 T: INTEGER
    7  | CHAR
    8  | BOOLEAN
    9  | STRING
   10  | IDU

   11 NB: %empty

   12 DT: TYPE IDD ASSIGN const_array LEFT_SQUARE NUM RIGHT_SQUARE OF T
   13   | TYPE IDD ASSIGN STRUCT NB LEFT_BRACES DC RIGHT_BRACES
   14   | TYPE IDD ASSIGN T

   15 DC: DC SEMI_COLON LI COLON T
   16   | LI COLON T

   17 DF: FUNCTION IDD NB LEFT_PARENTHESIS LP RIGHT_PARENTHESIS COLON T B

   18 LP: LP COMMA IDD COLON T
   19   | IDD COLON T
   20   | %empty

   21 B: LEFT_BRACES LDV LS RIGHT_BRACES
   22  | LEFT_BRACES LS RIGHT_BRACES

   23 LDV: LDV DV
   24    | DV

   25 LS: LS S
   26   | S

   27 DV: VAR LI COLON T SEMI_COLON

   28 LI: LI COMMA IDD
   29   | IDD

   30 S: IF LEFT_PARENTHESIS E RIGHT_PARENTHESIS S
   31  | IF LEFT_PARENTHESIS E RIGHT_PARENTHESIS S ELSE S
   32  | WHILE LEFT_PARENTHESIS E RIGHT_PARENTHESIS S
   33  | DO S WHILE LEFT_PARENTHESIS E RIGHT_PARENTHESIS SEMI_COLON
   34  | B
   35  | LV ASSIGN E SEMI_COLON
   36  | BREAK SEMI_COLON
   37  | CONTINUE SEMI_COLON
   38  | RETURN E SEMI_COLON

   39 E: E AND L
   40  | E OR L
   41  | L

   42 L: L LESS_THAN R
   43  | L GREATER_THAN R
   44  | L LESS_OR_EQUAL R
   45  | L GREATER_OR_EQUAL R
   46  | L EQUALS R
   47  | L NOT_EQUAL R
   48  | R

   49 R: R PLUS Y
   50  | R MINUS Y
   51  | Y

   52 Y: Y TIMES F
   53  | Y DIVIDE F
   54  | F

   55 F: LV
   56  | PLUS_PLUS LV
   57  | MINUS_MINUS LV
   58  | LV PLUS_PLUS
   59  | LV MINUS_MINUS
   60  | LEFT_PARENTHESIS E RIGHT_PARENTHESIS
   61  | IDU LEFT_PARENTHESIS LE RIGHT_PARENTHESIS
   62  | MINUS F
   63  | NOT F
   64  | TRUE
   65  | FALSE
   66  | CHR
   67  | STR
   68  | NUM

   69 LE: LE COMMA E
   70   | E

   71 LV: LV DOT IDU
   72   | LV LEFT_SQUARE E RIGHT_SQUARE
   73   | IDU

   74 IDD: id

   75 IDU: id

   76 TRUE: const_true

   77 FALSE: const_false

   78 CHR: const_char

   79 STR: const_string

   80 NUM: const_number


Terminals, with rules where they appear

$end (0) 0
error (256)
STRUCT (258) 13
OF (259) 12
COLON (260) 15 16 17 18 19 27
SEMI_COLON (261) 15 27 33 35 36 37 38
COMMA (262) 18 28 69
EQUALS (263) 46
LEFT_SQUARE (264) 12 72
RIGHT_SQUARE (265) 12 72
LEFT_BRACES (266) 13 21 22
RIGHT_BRACES (267) 13 21 22
LEFT_PARENTHESIS (268) 17 30 31 32 33 60 61
RIGHT_PARENTHESIS (269) 17 30 31 32 33 60 61
AND (270) 39
OR (271) 40
LESS_THAN (272) 42
GREATER_THAN (273) 43
LESS_OR_EQUAL (274) 44
GREATER_OR_EQUAL (275) 45
NOT_EQUAL (276) 47
EQUAL_EQUAL (277)
PLUS (278) 49
PLUS_PLUS (279) 56 58
MINUS (280) 50 62
MINUS_MINUS (281) 57 59
TIMES (282) 52
DIVIDE (283) 53
DOT (284) 71
NOT (285) 63
TYPE (286) 12 13 14
RETURN (287) 38
ELSE (288) 31
BREAK (289) 36
WHILE (290) 32 33
VAR (291) 27
ASSIGN (292) 12 13 14 35
CONTINUE (293) 37
FUNCTION (294) 17
STRING (295) 9
IF (296) 30 31
BOOLEAN (297) 8
CHAR (298) 7
INTEGER (299) 6
DO (300) 33
const_array (301) 12
const_char (302) 78
const_number (303) 80
const_string (304) 79
id (305) 74 75
const_true (306) 76
const_false (307) 77
ERR_REDCL (308)
ERR_NO_DECL (309)
ERR_TYPE_EXPECTED (310)
ERR_BOOL_TYPE_EXPECTED (311)
ERR_TYPE_MISMATCH (312)
ERR_INVALID_TYPE (313)
ERR_KIND_NOT_STRUCT (314)
ERR_FIELD_NOT_DECL (315)
ERR_KIND_NOT_ARRAY (316)
ERR_INVALID_INDEX_TYPE (317)
ERR_KIND_NOT_VAR (318)
ERR_KIND_NOT_FUNCTION (319)
ERR_TOO_MANY_ARGS (320)
ERR_PARAM_TYPE (321)
ERR_TOO_FEW_ARGS (322)
ERR_RETURN_TYPE_MISMATCH (323)
NT_TRUE <type> (324)
NT_FALSE <type> (325)
NT_CHR <type> (326)
NT_STR <type> (327)
NT_NUM <type> (328)
MF <type> (329)
MC <type> (330)
NO_KIND_DEF_ (331)
VAR_ (332)
PARAM_ (333)
FUNCTION_ (334)
FIELD_ (335)
ARRAY_TYPE_ (336)
STRUCT_TYPE_ (337)
ALIAS_TYPE_ (338)
SCALAR_TYPE_ (339)
UNIVERSAL_ (340)
"then" (341)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
P (88)
    on left: 1, on right: 0
LDE (89)
    on left: 2 3, on right: 1 2
DE (90)
    on left: 4 5, on right: 2 3
T (91)
    on left: 6 7 8 9 10, on right: 12 14 15 16 17 18 19 27
NB (92)
    on left: 11, on right: 13 17
DT (93)
    on left: 12 13 14, on right: 5
DC (94)
    on left: 15 16, on right: 13 15
DF (95)
    on left: 17, on right: 4
LP (96)
    on left: 18 19 20, on right: 17 18
B (97)
    on left: 21 22, on right: 17 34
LDV (98)
    on left: 23 24, on right: 21 23
LS (99)
    on left: 25 26, on right: 21 22 25
DV (100)
    on left: 27, on right: 23 24
LI (101)
    on left: 28 29, on right: 15 16 27 28
S (102)
    on left: 30 31 32 33 34 35 36 37 38, on right: 25 26 30 31 32 33
E (103)
    on left: 39 40 41, on right: 30 31 32 33 35 38 39 40 60 69 70 72
L (104)
    on left: 42 43 44 45 46 47 48, on right: 39 40 41 42 43 44 45 46
    47
R (105)
    on left: 49 50 51, on right: 42 43 44 45 46 47 48 49 50
Y (106)
    on left: 52 53 54, on right: 49 50 51 52 53
F (107)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68, on right: 52
    53 54 62 63
LE (108)
    on left: 69 70, on right: 61 69
LV (109)
    on left: 71 72 73, on right: 35 55 56 57 58 59 71 72
IDD (110)
    on left: 74, on right: 12 13 14 17 18 19 28 29
IDU (111)
    on left: 75, on right: 10 61 71 73
TRUE (112)
    on left: 76, on right: 64
FALSE (113)
    on left: 77, on right: 65
CHR (114)
    on left: 78, on right: 66
STR (115)
    on left: 79, on right: 67
NUM (116)
    on left: 80, on right: 12 68


State 0

    0 $accept: . P $end

    TYPE      shift, and go to state 1
    FUNCTION  shift, and go to state 2

    P    go to state 3
    LDE  go to state 4
    DE   go to state 5
    DT   go to state 6
    DF   go to state 7


State 1

   12 DT: TYPE . IDD ASSIGN const_array LEFT_SQUARE NUM RIGHT_SQUARE OF T
   13   | TYPE . IDD ASSIGN STRUCT NB LEFT_BRACES DC RIGHT_BRACES
   14   | TYPE . IDD ASSIGN T

    id  shift, and go to state 8

    IDD  go to state 9


State 2

   17 DF: FUNCTION . IDD NB LEFT_PARENTHESIS LP RIGHT_PARENTHESIS COLON T B

    id  shift, and go to state 8

    IDD  go to state 10


State 3

    0 $accept: P . $end

    $end  shift, and go to state 11


State 4

    1 P: LDE .
    2 LDE: LDE . DE

    TYPE      shift, and go to state 1
    FUNCTION  shift, and go to state 2

    $default  reduce using rule 1 (P)

    DE  go to state 12
    DT  go to state 6
    DF  go to state 7


State 5

    3 LDE: DE .

    $default  reduce using rule 3 (LDE)


State 6

    5 DE: DT .

    $default  reduce using rule 5 (DE)


State 7

    4 DE: DF .

    $default  reduce using rule 4 (DE)


State 8

   74 IDD: id .

    $default  reduce using rule 74 (IDD)


State 9

   12 DT: TYPE IDD . ASSIGN const_array LEFT_SQUARE NUM RIGHT_SQUARE OF T
   13   | TYPE IDD . ASSIGN STRUCT NB LEFT_BRACES DC RIGHT_BRACES
   14   | TYPE IDD . ASSIGN T

    ASSIGN  shift, and go to state 13


State 10

   17 DF: FUNCTION IDD . NB LEFT_PARENTHESIS LP RIGHT_PARENTHESIS COLON T B

    $default  reduce using rule 11 (NB)

    NB  go to state 14


State 11

    0 $accept: P $end .

    $default  accept


State 12

    2 LDE: LDE DE .

    $default  reduce using rule 2 (LDE)


State 13

   12 DT: TYPE IDD ASSIGN . const_array LEFT_SQUARE NUM RIGHT_SQUARE OF T
   13   | TYPE IDD ASSIGN . STRUCT NB LEFT_BRACES DC RIGHT_BRACES
   14   | TYPE IDD ASSIGN . T

    STRUCT       shift, and go to state 15
    STRING       shift, and go to state 16
    BOOLEAN      shift, and go to state 17
    CHAR         shift, and go to state 18
    INTEGER      shift, and go to state 19
    const_array  shift, and go to state 20
    id           shift, and go to state 21

    T    go to state 22
    IDU  go to state 23


State 14

   17 DF: FUNCTION IDD NB . LEFT_PARENTHESIS LP RIGHT_PARENTHESIS COLON T B

    LEFT_PARENTHESIS  shift, and go to state 24


State 15

   13 DT: TYPE IDD ASSIGN STRUCT . NB LEFT_BRACES DC RIGHT_BRACES

    $default  reduce using rule 11 (NB)

    NB  go to state 25


State 16

    9 T: STRING .

    $default  reduce using rule 9 (T)


State 17

    8 T: BOOLEAN .

    $default  reduce using rule 8 (T)


State 18

    7 T: CHAR .

    $default  reduce using rule 7 (T)


State 19

    6 T: INTEGER .

    $default  reduce using rule 6 (T)


State 20

   12 DT: TYPE IDD ASSIGN const_array . LEFT_SQUARE NUM RIGHT_SQUARE OF T

    LEFT_SQUARE  shift, and go to state 26


State 21

   75 IDU: id .

    $default  reduce using rule 75 (IDU)


State 22

   14 DT: TYPE IDD ASSIGN T .

    $default  reduce using rule 14 (DT)


State 23

   10 T: IDU .

    $default  reduce using rule 10 (T)


State 24

   17 DF: FUNCTION IDD NB LEFT_PARENTHESIS . LP RIGHT_PARENTHESIS COLON T B

    id  shift, and go to state 8

    $default  reduce using rule 20 (LP)

    LP   go to state 27
    IDD  go to state 28


State 25

   13 DT: TYPE IDD ASSIGN STRUCT NB . LEFT_BRACES DC RIGHT_BRACES

    LEFT_BRACES  shift, and go to state 29


State 26

   12 DT: TYPE IDD ASSIGN const_array LEFT_SQUARE . NUM RIGHT_SQUARE OF T

    const_number  shift, and go to state 30

    NUM  go to state 31


State 27

   17 DF: FUNCTION IDD NB LEFT_PARENTHESIS LP . RIGHT_PARENTHESIS COLON T B
   18 LP: LP . COMMA IDD COLON T

    COMMA              shift, and go to state 32
    RIGHT_PARENTHESIS  shift, and go to state 33


State 28

   19 LP: IDD . COLON T

    COLON  shift, and go to state 34


State 29

   13 DT: TYPE IDD ASSIGN STRUCT NB LEFT_BRACES . DC RIGHT_BRACES

    id  shift, and go to state 8

    DC   go to state 35
    LI   go to state 36
    IDD  go to state 37


State 30

   80 NUM: const_number .
